# rulial-navigator

./: PROJECT_STRUCTURE.md  README.md  analyze_results.py  atlas_data.json  atlas_full.db  atlas_gpu.db  atlas_v4.db  atlas_v4.json  atlas_v4_test.json  atlas_v5.db  atlas_v5_test.db  atlas_v5_titans.db  cayley.yml  discoveries_v5.json  golden_filaments.json  merge_atlas.py  pyproject.toml  replay_filaments.py  test_miner.py  titans_history.json  verify_bridge.py  verify_camera.py  verify_ground_truth.py  verify_rule_behavior.py  verify_titans.py
.trunk/: trunk.yaml
data/: atlas_full_v6_gpu.db  sheaf_model.pt  titans_memory.pt
data/json/: atlas_v4.json  atlas_v4_condensate.json  atlas_v5.json  critical_density_scan.json  s_parameter_sweep.json
docs/: CODEBASE_AUDIT.md  Causal-Invariance-and-the-Convergence-of-Multiway-Systems.md  Dark-Matter-as-Oligons.md  Emes-and-the-Glass-Floor.md  Mapping-Infinite-Rulial-Space.md  Q-v2- plan.md  RESEARCH_STATUS.md  USAGE_GUIDE.md  Vacuum-Condensate-Discovery.md  Whitepaper-Vacuum-Condensate-Phases.md  example.py  implementation_plan.md
docs/concepts/: Dark-Energy-and-Hubble-Tension.md  Engineering-Spacetime.md  Galactic-Tension-and-Dimension-Decay.md  Geometry-of-the-Quantum-Branchial-Graph.md  LOCAL-Algorithm-Connection.md  Particles-as-Vortex-Knots.md  Quantum-Mechanics-from-Branchial-Space.md  SVT-Visual-Guide.md  Sheaf-Theory-Connection.md  The-Metastable-Superfluid-Membrane.md  The_Ruliad.md  topological_maps_of_computational_evolution.md
docs/development_tests_archived/: analyze_results.py  debug_engine.py  main.py  mine_life.py  verify_2d.py  verify_ndtm.py
docs/development_tests_archived/data_archived/: atlas_debug.json  atlas_grid.json  titans_history.json
docs/development_tests_archived/runners_deprecated/: probe_2d_v5_complete.py
scripts/: README.md  analysis.py  analyze_rule.py  explore_atlas.py  export_cayley.py  find_critical_density.py  fractal_dimension_test.py  investigate_questions.py  percolation_test.py  replicate_all.py  s_parameter_sweep.py  stress_test_goldilocks.py  train_sheaf.py  visualize.py
src/rulial/: cli.py  pipeline.py
src/rulial/analytics/: analyzer.py
src/rulial/compression/: flow.py  metrics.py  neural.py  rigid.py
src/rulial/engine/: eca.py  spacetime.py  totalistic.py  turing.py
src/rulial/learning/: hypercube.py  sheaf_learner.py
src/rulial/mapper/: atlas.py  (+9 more)
(+28 files in other folders)
